--- a/index_de.html
+++ b/index_de.html
@@ -52,7 +52,7 @@
 			<li><a href="#hobbies" class="nav-link scrollto"><i class="bx bxs-paint"></i> <span>Hobbies</span></a></li>
 			<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Lebenslauf</span></a></li>
 			<li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-message-square-detail"></i> <span>Zeugnisse</span></a></li>
-			<li><a href="index_de.html" class="nav-link scrollto"><i class="german-flag">🇬🇧</i> <span>Englisch</span></a></li>
+			<li><a href="index.html" class="nav-link scrollto"><i class="german-flag">🇬🇧</i> <span>Englisch</span></a></li>
 		</ul>
 	</nav><!-- .nav-menu -->
 
@@ -386,7 +386,7 @@
 		<div class="container" data-aos="fade-up">
 
 			<div class="section-title">
-				<h2>Testimonials</h2>
+				<h2>Zeugnisse</h2>
 			</div>
 
 			<div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -452,7 +452,6 @@
 <!-- ======= Footer ======= -->
 <footer id="footer">
 	<div class="container">
-		<h3>Tanya Gupta</h3>
 		<p>Die Erstellung von elegantem und effizientem Code ist nicht nur eine Fähigkeit, sondern zeugt von Hingabe, Professionalität und einem unermüdlichen Streben nach Spitzenleistungen.</p>
 		<div class="social-links">
 			<a href="https://www.facebook.com/tanyagupta9013" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
